--- a/iafas/src/main/webapp/mainCompromisoAnual.xhtml
+++ b/iafas/src/main/webapp/mainCompromisoAnual.xhtml
@@ -236,7 +236,7 @@
                         <br/>
                         <h:panelGrid columns="2" style="font-weight: bold; font-size: 11px; width: 100%">
                             <p:outputLabel value="Glosa:" />
-                            <p:outputLabel value="#{mbCompAnual.concepto}" id="texto" styleClass="outLabel"/>
+                            <p:outputLabel value="#{mbCompAnual.conceptoDetalle}" id="texto" styleClass="outLabel"/>
                         </h:panelGrid>
                 </p:tab>
                 <p:tab title="Movimientos" >
