--- a/iafas/src/main/webapp/insRegCompMensual.xhtml
+++ b/iafas/src/main/webapp/insRegCompMensual.xhtml
@@ -93,7 +93,7 @@
                  <h:panelGrid columns="3" id="panel_proveedor">
                       <h:outputText id="inptxtRuc" styleClass="outLabel" value="#{mbCompMensual.ruc}" style="display: block;"/>
                       <h:outputLabel value="-"/>
-                      <h:outputLabel styleClass="outLabel" value="#{mbCompAnual.razonSocial}" style="display: block;"/>
+                      <h:outputLabel styleClass="outLabel" value="#{mbCompMensual.razonSocial}" style="display: block;"/>
                  </h:panelGrid>
                  <p:outputLabel value="Moneda:"/>
                         <h:selectOneMenu id="tipMon" styleClass="select" value="#{mbCompMensual.vcodMoneda}" disabled="true">
@@ -123,7 +123,7 @@
                    maxlength="10"/>
                     <h:panelGrid id="panelOC" style="visibility:hidden;">
                             <p:commandButton id="btnbuscarOCOS" icon="ui-icon-search" value="Buscar" 
-                            action="#{mbCompAnual.validarOCS}" 
+                            action="#{mbCompMensual.validarOCS}" 
                             style="height:25px;"
                             onblur="completaCeros(this.name, 10);" ajax="true"
                             title="Búsqueda Ordenes Compra o Servicio, validará el RUC y RazonSocial" update="panel_proveedor"/>
